--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </header>
 <main>
     <section>
-        <div class="container text-center mx-4 my-5">
+        <div class="container text-center my-5">
             <div class="row g-2">
               <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                 <div class="p-3 border bg-warning rounded-4 h-75 d-flex align-items-center justify-content-around">
@@ -129,6 +129,82 @@
             </div>
           </div>
     </section>
+    <section>
+        <h1 class="ms-5">Shoes</h1>
+      <div class="card-group d-flex p-5 ms-5">
+        <div class="container col-lg-4 col-md-6 col-sm-12 col-12">
+        <div class="card h-100 border-0 shadow-lg" style="width: 21rem;">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h3 class="card-title">Supply 350</h3>
+              <h1>$160</h1>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="btn btn-danger btn-gradient mt-5">Buy Now</a>
+            </div>
+          </div>
+    </div>
+    <div class="container col-lg-4 col-md-6 col-sm-12 col-12">
+        <div class="card h-100 border-0 shadow-lg" style="width: 21rem;">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h3 class="card-title">Nike 360</h3>
+              <h1>$160</h1>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-danger btn-gradient" style="margin-top: 75px;">Buy Now</a>
+            </div>
+          </div>
+    </div>
+    <div class="container col-lg-4 col-md-6 col-sm-12 col-12">
+        <div class="card h-100 border-0 shadow-lg" style="width: 21rem;">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h3 class="card-title">Red Airmax</h3>
+              <h1>$160</h1>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <a href="#" class="btn btn-danger btn-gradient">Buy Now</a>
+            </div>
+          </div>
+    </div>
+  </div>
+    </section>
+    <section>
+      <h1 class="ms-5">Backpack</h1>
+    <div class="card-group d-flex p-5 ms-5">
+      <div class="container col-lg-4 col-md-6 col-sm-12 col-12">
+      <div class="card h-100 border-0 shadow-lg" style="width: 21rem;">
+          <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3 class="card-title">Red Laltu Bag</h3>
+            <h1>$160</h1>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="#" class="btn btn-danger btn-gradient mt-5">Buy Now</a>
+          </div>
+        </div>
+  </div>
+  <div class="container col-lg-4 col-md-6 col-sm-12 col-12">
+      <div class="card h-100 border-0 shadow-lg" style="width: 21rem;">
+          <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3 class="card-title">Nike 360</h3>
+            <h1>$160</h1>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-danger btn-gradient" style="margin-top:75px;">Buy Now</a>
+          </div>
+        </div>
+  </div>
+  <div class="container col-lg-4 col-md-6 col-sm-12 col-12">
+      <div class="card h-100 border-0 shadow-lg" style="width: 21rem;">
+          <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3 class="card-title">Red Airmax</h3>
+            <h1>$160</h1>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <a href="#" class="btn btn-danger btn-gradient">Buy Now</a>
+          </div>
+        </div>
+  </div>
+</div>
+  </section>
 </main>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
